--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div #swiperRef="" class="swiper card-swiper">
                 <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <a href="" target="_blank" class="project-box">
+                    <a href="https://github.com/Edwardddyang/Pong" target="_blank" class="project-box">
                         <picture>
                             <img src="images/pong.png" alt="Functional Adventure">
                         </picture>
@@ -88,7 +88,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="" target="_blank" class="project-box">
+                    <a href="https://github.com/Edwardddyang/VGA-Verilog-Geometry-Dash-" target="_blank" class="project-box">
                         <video autoplay muted loop playsinline>
                             <source src="images/7054a872df894aa1869c769daff614df.mov">
                         </video>
@@ -109,7 +109,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="" target="_blank" class="project-box">
+                    <a target="_blank" class="project-box">
                         <picture>
                             <img src="images/IMG_2865.jpg" alt="Car">
                         </picture>
