--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </nav>
     </header>
     <section id="about-section">
-        <h2>Edward Yang!</h2>
+        <h2>Hello world!</h2>
         <div class="headshot">
             <picture>
                 <!--Shows headshot in webp file, if that doesnt load, use the png file-->
-              <img src="images/photo.jpg" alt="headshot">
+              <img src="images/headshot.png" alt="headshot">
             </picture>
         </div>
         <div class="bio">
@@ -64,19 +64,8 @@
     
         <!-- Software Projects Subsection -->
         <div class="project-subsection">
-            <h3>Software</h3>
             <div #swiperRef="" class="swiper card-swiper">
                 <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <a href="https://github.com/Edwardddyang/Pong" target="_blank" class="project-box">
-                        <picture>
-                            <img src="images/pong.png" alt="Functional Adventure">
-                        </picture>
-                        <h4>Pong Game</h4>
-                        <h5><em>C++</em></h5>
-                        <p>The classic pong game, with the addition of gravity and an extra ball every 5 hits!</p>
-                    </a>
-                </div>
                 <div class="swiper-slide">
                     <a href="https://devpost.com/software/lipid-nanoparticle-delivery" target="_blank" class="project-box">
                         <picture>
@@ -98,24 +87,23 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="" target="_blank" class="project-box">
+                    <a href="https://www.blueskysolar.org/" target="_blank" class="project-box">
                         <picture>
-                            <source srcset="images/webp/github issues.webp" type="image/webp">
-                            <img src="images/github issues.png" alt="Github Issues">
+                            <img src="images/bluesky.png" alt="Github Issues">
                         </picture>
                         <h4>Blue Sky Race Optimizer</h4>
                         <h5><em>C++</em></h5>
-                        <p></p>
+                        <p>Designed an optimized race strategy for the World Solar Challenge by incoporating a multithreaded optimization engine to simulate various speed-profiles.</p>
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a target="_blank" class="project-box">
+                    <a href="https://github.com/Edwardddyang/Pong" target="_blank" class="project-box">
                         <picture>
-                            <img src="images/IMG_2865.jpg" alt="Car">
+                            <img src="images/pong.png" alt="Functional Adventure">
                         </picture>
-                        <h4>Self Driving Racecar</h4>
-                        <h5><em>Fusion 360, Arduino, Arduino IDE, Adafruit Feather</em></h5>
-                        <p>A self driving race car I designed and programmed in an engineering competition, earning first place!</p>
+                        <h4>Pong Game</h4>
+                        <h5><em>C++</em></h5>
+                        <p>The classic pong game, with the addition of gravity and an extra ball every 5 hits!</p>
                     </a>
                 </div>
                 <div class="swiper-slide">
@@ -129,9 +117,19 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="" target="_blank" class="project-box">
+                    <a target="_blank" class="project-box">
                         <picture>
-                            <img src="images/othello.png" alt="Car">
+                            <img src="images/IMG_2865.jpg" alt="Car">
+                        </picture>
+                        <h4>Self Driving Racecar</h4>
+                        <h5><em>Fusion 360, Arduino, Arduino IDE, Adafruit Feather</em></h5>
+                        <p>A self driving race car I designed and programmed in an engineering competition, earning first place!</p>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="https://docs.google.com/document/d/1_hTpKKWQVMDznL6CCoLsVH8v9ZDPn7YA/edit?usp=sharing&ouid=103066125182271616427&rtpof=true&sd=true" target="_blank" class="project-box">
+                        <picture>
+                            <img src="images/hvac.png" alt="Car">
                         </picture>
                         <h4>HVAC Design Team</h4>
                         <h5><em>Arduino, Solidworks</em></h5>
@@ -147,21 +145,19 @@
     <section id="skills-section">
         <h2>Skills</h2>
         <div class="skills-container">
-            <i class="fa-brands fa-python"></i>
-            <i class="fa-brands fa-java"></i>
-            <i class="fa-brands fa-git-alt"></i>
-            <i class="fa-brands fa-github-alt"></i>
-            <i class="fa-solid fa-database"></i>
-            <i class="devicon-r-plain"></i>
-            <i class="devicon-c-plain-wordmark"></i>
+            <i class="devicon-cplusplus-plain" title="C++"></i>
+            <i class="fa-solid fa-microchip" title="Verilog"></i>
+            <i class="devicon-c-plain-wordmark" title="C"></i>
+            <i class="fa-brands fa-git-alt" title="Git"></i>
+            <i class="fa-solid fa-microchip" title="FPGA"></i>
+            <i class="devicon-arduino-plain" title="Arduino"></i>
+            <i class="devicon-html5-plain" title="HTML"></i>
+            <i class="devicon-css3-plain" title="CSS"></i>
+            <i class="devicon-matlab-plain" title="MatLab"></i>
+            <i class="devicon-python-plain" title="Python"></i>
         </div>
     </section>
     <div class="divider"></div>
-    <section id="leave-message-section">
-        <h2>Leave a Message!</h2>
-        <p>coming soon :)</p>
-    </section>
-
     <!-- Swiper JS -->
     <footer>
         <p>&copy; <span id="year"></span> Edward Yang</p>
