--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="bio">
             <p>
-                Hey! I'm Edward, a second year Uoft ECE student that is passionate about building.
+                Hey! I'm Edward, a second year Uoft Electrical and Computer Engineering student that is passionate about building and solving real-world problems. 
             </p>
             <br>
             <p>
