--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- <a href="#experience-section">Experience</a> -->
                 <a href="#projects-section">Experiences</a>
                 <a href="#skills-section">Skills</a>
-                <a href="#leave-message-section">Leave a Message!</a>
+                <a href="mailto:edwarddd.yang@mail.utoronto.ca">Leave a Message!</a>
             </div>
         </nav>
     </header>
