--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             <i class="devicon-css3-plain" title="CSS"></i>
             <i class="devicon-matlab-plain" title="MatLab"></i>
             <i class="devicon-python-plain" title="Python"></i>
+            <i class="devicon-mysql-plain" title="MySQL"></i>
         </div>
     </section>
     <div class="divider"></div>
