PostgreSQL and wordmark

--- a/index.html
+++ b/index.html
@@ -148,17 +148,16 @@
     <section id="skills-section">
         <h2>Skills</h2>
         <div class="skills-container">
-            <i class="devicon-cplusplus-plain" title="C++"></i>
-            <i class="fa-solid fa-microchip" title="Verilog"></i>
+            <i class="devicon-cplusplus-plain-wordmark" title="C++"></i>
+            <i class="fa-solid fa-microchip" title="Verilog & FPGA"></i>
             <i class="devicon-c-plain-wordmark" title="C"></i>
-            <i class="fa-brands fa-git-alt" title="Git"></i>
-            <i class="fa-solid fa-microchip" title="FPGA"></i>
-            <i class="devicon-arduino-plain" title="Arduino"></i>
-            <i class="devicon-html5-plain" title="HTML"></i>
-            <i class="devicon-css3-plain" title="CSS"></i>
-            <i class="devicon-matlab-plain" title="MatLab"></i>
-            <i class="devicon-python-plain" title="Python"></i>
-            <i class="devicon-mysql-plain" title="MySQL"></i>
+            <i class="devicon-git-plain-wordmark" title="Git"></i>
+            <i class="devicon-arduino-plain-wordmark" title="Arduino"></i>
+            <i class="devicon-html5-plain-wordmark" title="HTML"></i>
+            <i class="devicon-css3-plain-wordmark" title="CSS"></i>
+            <i class="devicon-python-plain-wordmark" title="Python"></i>
+            <i class="devicon-mysql-plain-wordmark" title="MySQL"></i>
+            <i class="devicon-postgresql-plain-wordmark" title="PostgreSQL"></i>
         </div>
     </section>
     <div class="divider"></div>
